# OxiDish

./: .gitignore  Cargo.toml  README.md  db.sh  docker-compose.yml  flake.nix  index.html
.sqlx/: query-045407776887c3f469bdac525352e51857864c8a81f11e0f7fe194a1c85bcc6c.json  query-4044ecbd19d5ead1f15bf14d0ea215b6a1eafb310a103bc865be7deddd977689.json  query-648a13586f6df5940e1dc73cd6f8b07c09a6a2dcebaeec7144e9598667b3801a.json  query-6d9cd5b692fcd6611ee1bb5d21bd03c45ff31258731484b88ba59ca711637156.json  query-71fad4a7576a3b38351da5c35d76a8db504d420c86f7956fd0335bd4b2aee9ed.json  query-d3c10cca38be70ddb32e7f276dee5e881fca7520b44e5f655440f9993f1fcd99.json
database/: Cargo.toml
database/migrations/: 0001_recipes_schema.sql  0002_recipes_search.sql
database/src/: connection.rs  lib.rs
database/src/models/: mod.rs  recipe.rs  recipe_ingredient.rs
database/src/queries/: ingredient_name.rs  mod.rs  recipe.rs
database/tests/: queries.rs
database/tests/fixtures/: ingredient_names.sql  recipes.sql
recipe_db/: Cargo.toml
recipe_db/migrations/: 0001_recipes.sql
recipe_db/src/: connection.rs  lib.rs
recipe_db/src/models/: mod.rs  recipe.rs  recipe_ingredient.rs
recipe_db/src/queries/: recipe.rs
recipe_web/: Cargo.toml
src/: config.rs  lib.rs  main.rs
src/http/: error.rs  mod.rs  recipes.rs
src/http/ingredients/: mod.rs  names.rs  quantities.rs  units.rs
src/models/: mod.rs  recipe.rs
tests/: common.rs  ingredient_names.rs  ingredient_quantities.rs  ingredient_units.rs
web/: Cargo.toml
