[package]
name = "OxiDish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ">=1.0.75"
axum = { version = ">=0.8.1, <1.0.0", features = ["macros", "tower-log"] }
clap = { version = ">=4.4.8", features = ["env", "derive"] }
env_logger = ">=0.10.1"
http-body-util = ">=0.1.0"
log = ">=0.4.20"
mime = ">=0.3.17"
serde = { version = ">=1.0.193", features = ["derive"] }
serde_json = ">=1.0.108"
sqlx = { version = ">=0.7.3, <1.0.0", features = ["runtime-tokio", "postgres"] }
thiserror = ">=1.0.50"
tokio = { version = ">=1.34.0", features = ["macros", "rt-multi-thread"] }
tower = ">=0.4.11"
tower-http = { version = ">=0.5.0", features = ["trace"] }
